# dv-pari-circuit

./: Cargo.toml  README.md
.github/workflows/: zizmor.yml
docs/: binaryfield.md
src/: blake3_ckt.rs  builder.rs  curve_ckt.rs  curve_decode_ckt.rs  curve_ref.rs  curve_scalar_mul_ckt.rs  dv_ckt.rs  dv_ref.rs  fr_ckt.rs  fr_ref.rs  gf9_ckt.rs  gf9_eval_ckt.rs  gf9_ref.rs  gf_ckt.rs  gf_interpolate_ckt.rs  gf_mul_ckt.rs  gf_mul_fft_ckt.rs  gf_ref.rs  lib.rs
