[package]
name = "dv-pari-circuit" 
version = "0.1.0" 
edition = "2024" 
authors = []
description = "Binary circuit generator for DV-Pari verifier" 
license = "MIT OR Apache-2.0" 
readme = "README.md"
repository = "https://github.com/alpenlabs/dv-pari-circuit" 
categories = ["cryptography::cryptocurrencies"] 
keywords = ["crypto", "bitcoin", "glock"] 

[lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rust.unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage, coverage_nightly)',
] }
rust.missing_docs = "warn"
rustdoc.all = "warn"
clippy.too_long_first_doc_paragraph = "warn"

[features]

[dependencies]
num-bigint = { version = "0.4.4", features = ["rand"] }
mcircuit = "0.1.10"
rayon = "1.10.0"

[dev-dependencies]
xs233-sys = "=0.2.0"
blake3 = "1.8.2"
rand = "0.8.5"
num-traits = "0.2.18"

[profile.release]
opt-level = "z"   # Optimized for size, use 3 for speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary
